2005-05-04  John Luke  <john.luke@gmail.com>

	* en/Gtk/AboutDialog.xml: doc

2005-05-04  Dan Winship  <danw@novell.com>

	* en/GLib/GType.xml: update, and remove a bunch of examples of how
	not to derive types any more...

	* en/GLib/GTypeAttribute.xml: add

2005-05-04  Dan Winship  <danw@novell.com>

	* updater/updater.cs (GetFieldVisibility, GetMethodVisibility):
	return "protected" for "protected internal" members (rather than
	returning null and causing them to be ignored).

	* en/Gtk/BoxChild.xml:
	* en/Gtk/ButtonBoxChild.xml:
	* en/Gtk/FixedChild.xml:
	* en/Gtk/LayoutChild.xml:
	* en/Gtk/MenuChild.xml:
	* en/Gtk/NotebookChild.xml:
	* en/Gtk/PanedChild.xml:
	* en/Gtk/TableChild.xml:
	* en/Gtk/ToolbarChild.xml: document constructors

2005-05-03  Dan Winship  <danw@novell.com>

	* document new callback properties / deprecate some old
	callback-setting methods

	* updater/updater.cs (Update): close the writer when we're done.
	(Compare): don't write "updates" to a file if its FullName is
	wrong.

2005-04-24  Dan Winship  <danw@novell.com>

	* en/Pango/Attribute.xml, etc: document new Attribute stuff.

2005-04-21  Dan Winship  <danw@novell.com>

	* en/GLib/Marshaller.xml: update

	* en/Gtk/ModuleDisplayInitFunc.xml:
	* en/Gtk/ModuleInitFunc.xml: gone

2005-04-22  John Luke  <john.luke@gmail.com>

	* en/*/*.xml: run gen*.exe to fill in some docs
	on the new gtk, atk, gdk, and pango stuff for 2.6

2005-04-08  Dan Winship  <danw@novell.com>

	* en/Gtk/Container.xml: document new children stuff

2005-04-04  Dan Winship  <danw@novell.com>

	* en/Pango/Scale.xml: update

2005-04-01  Dan Winship  <danw@novell.com>

	* en/Gdk/Pixbuf.xml: 
	* en/Gdk/PixbufAnimation.xml: 
	* en/Gdk/PixbufLoader.xml: 
	* en/Gtk/Image.xml: document new/updated stream/resource constructors

2005-03-15  Dan Winship  <danw@novell.com>

	* en/Gtk/NodeStore.xml (AddNode):
	* en/Gtk/TreeNode.xml (AddChild): I, for one, welcome our new
	insert overloads.
