@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Renders numbers as progress bars</summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>Gtk.CellRenderer</BaseTypeName>
@@ -72,9 +72,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Default constructor</summary>
         <returns>a <see cref="T:Gtk.CellRendererProgress" /></returns>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -98,9 +98,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Determines the label which will be drawn over the progress bar.</summary>
         <returns>a <see cref="T:System.String" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Setting this property to <see langword="null" /> causes the default label to be displayed. Setting this property to an empty string causes no label to be displayed.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Value">
@@ -111,9 +111,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Determines the percentage to which the progress bar will be "filled in".</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Allowed values are between 0 and 100.</remarks>
       </Docs>
     </Member>
   </Members>
