@@ -9,8 +9,9 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A widget which displays a list of icons in a grid</summary>
+    <remarks>
+      <see cref="T:Gtk.IconView" /> provides an alternative view on a list model. It displays the model as a grid of icons with labels. Like <see cref="T:Gtk.TreeView" />, it allows to select one or multiple items (depending on the selection mode, see <see cref="P:Gtk.IconView.SelectionMode" />). In addition to selection with the arrow keys, <see cref="T:Gtk.IconView" /> supports rubberband selection, which is controlled by dragging the pointer.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Container</BaseTypeName>
@@ -158,8 +159,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Unselects all the icons.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="SelectedForeach">
@@ -172,9 +173,9 @@
         <Parameter Name="func" Type="Gtk.IconViewForeachFunc" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Calls a function for each selected icon.</summary>
         <param name="func">a <see cref="T:Gtk.IconViewForeachFunc" /></param>
-        <remarks>To be added</remarks>
+        <remarks>Note that the model or selection cannot be modified from within this function.</remarks>
       </Docs>
     </Member>
     <Member MemberName="UnselectPath">
@@ -187,9 +188,9 @@
         <Parameter Name="path" Type="Gtk.TreePath" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Unselects the row at <paramref name="path" />.</summary>
         <param name="path">a <see cref="T:Gtk.TreePath" /></param>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="SelectAll">
@@ -200,8 +201,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Selects all the icons.</summary>
+        <remarks>The IconView must has its selection mode set to <see cref="F:Gtk.SelectionMode.Multiple" />.</remarks>
       </Docs>
     </Member>
     <Member MemberName="PathIsSelected">
@@ -214,10 +215,10 @@
         <Parameter Name="path" Type="Gtk.TreePath" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Returns <see langword="true" /> if the icon pointed to by <paramref name="path" /> is currently selected.</summary>
         <param name="path">a <see cref="T:Gtk.TreePath" /></param>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>If <paramref name="path" /> does not point to a valid location, <see langword="false" /> is returned.</remarks>
       </Docs>
     </Member>
     <Member MemberName="GetPathAtPos">
@@ -248,9 +249,9 @@
         <Parameter Name="path" Type="Gtk.TreePath" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Activates the item determined by <paramref name="path" />.</summary>
         <param name="path">a <see cref="T:Gtk.TreePath" /></param>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="SelectPath">
@@ -263,9 +264,9 @@
         <Parameter Name="path" Type="Gtk.TreePath" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Selects the row at <paramref name="path" />.</summary>
         <param name="path">a <see cref="T:Gtk.TreePath" /></param>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -302,9 +303,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Default constructor</summary>
         <returns>a <see cref="T:Gtk.IconView" /></returns>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -315,10 +316,10 @@
         <Parameter Name="model" Type="Gtk.TreeModel" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Create a new IconView with a model.</summary>
         <param name="model">a <see cref="T:Gtk.TreeModel" /></param>
         <returns>a <see cref="T:Gtk.IconView" /></returns>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -342,9 +343,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Specifies the selection mode of icon view.</summary>
         <returns>a <see cref="T:Gtk.SelectionMode" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>If the mode is <see cref="F:Gtk.SelectionMode.Multiple" />, rubberband selection is enabled, for the other modes, only keyboard selection is possible.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Columns">
@@ -355,9 +356,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The columns property contains the number of the columns in which the items should be displayed.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>If it is -1, the number of columns will be chosen automatically to fill the available area.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Margin">
@@ -368,9 +369,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Space which is inserted at the edges of the icon view.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Default value is 6.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Orientation">
@@ -381,9 +382,11 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>How the text and icon of each item are positioned relative to each other.
+
+</summary>
         <returns>a <see cref="T:Gtk.Orientation" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Default value is <see cref="F:Gtk.Orientation.Vertical" /></remarks>
       </Docs>
     </Member>
     <Member MemberName="ItemWidth">
@@ -394,9 +397,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The width used for each item.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="TextColumn">
@@ -407,9 +410,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Contains the number of the model column containing the texts which are displayed.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>The text column must be of type <see cref="F:GLib.GType.String" />. If this property and the MarkupColumn property are both set to -1, no text is displayed.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Spacing">
@@ -420,7 +423,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Space which is inserted between cells of an item.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
         <remarks>To be added</remarks>
       </Docs>
@@ -433,9 +436,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Contains the number of the model column containing the pixbufs which are displayed</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>The pixbuf column must be of type <see cref="P:Gdk.Pixbuf.GType" />. Setting this property to -1 turns off the display of pixbufs.</remarks>
       </Docs>
     </Member>
     <Member MemberName="RowSpacing">
@@ -446,9 +449,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Space which is inserted between grid rows.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Default value is 6.</remarks>
       </Docs>
     </Member>
     <Member MemberName="ColumnSpacing">
@@ -459,9 +462,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Space which is inserted between grid column.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Default value is 6.</remarks>
       </Docs>
     </Member>
     <Member MemberName="MarkupColumn">
@@ -472,9 +475,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Contains the number of the model column containing markup information to be displayed.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>The markup column must be of type <see cref="F:GLib.GType.String" />. If this property and the TextColumn property are both set to column numbers, it overrides the text column. If both are set to -1, no texts are displayed.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Model">
@@ -485,9 +488,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The model for the icon view.</summary>
         <returns>a <see cref="T:Gtk.TreeModel" /></returns>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="SelectedItems">
@@ -498,9 +501,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Creates a list of paths of all selected items.</summary>
         <returns>a <see cref="T:GLib.List" /></returns>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="SelectionChanged">
@@ -511,7 +514,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Emitted when the current selection changes.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -523,8 +526,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Emitted when UnselectAll () is called.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="ItemActivated">
@@ -535,8 +538,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Emitted when an item is activated.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="AllSelected">
@@ -547,8 +550,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Emitted when SelectAll () is called.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="ToggleCursorItem">
@@ -560,7 +563,7 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="MoveCursor">
@@ -572,7 +575,7 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="ActivateCursorItem">
@@ -596,7 +599,7 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
   </Members>
