@@ -1,6 +1,9 @@
 2005-05-04  John Luke  <john.luke@gmail.com>
 
 	* en/Gtk/AboutDialog.xml: doc
+	* en/Gtk/CellRendererCombo.xml: doc
+	* en/Gtk/CellRendererProgress.xml: doc
+	* en/Gtk/IconView.xml: doc
 
 2005-05-04  Dan Winship  <danw@novell.com>
 
